# eda-environment

./: .bashrc  .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  our.sv  sc_main.cpp  sc_top.cpp  sc_top.h  test_axi4_lite.cpp  test_axi4_lite.hpp  test_axil.cpp  test_axil.hpp  verilator.code-workspace  write_state.json
.docker/systemc/: Dockerfile
.docker/verilator/: Dockerfile
build_script/: clang.sh  cpplint.sh  googletest.sh  ninja.sh  systemc.sh  verilator.sh
docs/: MEMO.md
src/: apb.sv  axi4_lite_master.sv  axi4_lite_master_read_state.sv  axi4_lite_master_state.sv  axi4_lite_master_write_state copy.sv  axi4_lite_master_write_state.sv  axilm.sv  axilm_rd_ch.sv  axilm_wr_ch.sv  half_adder.sv
tb/: axi4_lite_if.svh  class_axi4_lite.svh  clk_rst_gen.sv  tb_top.sv
tests/: sc_main.cpp  sc_top.cpp  test_half_adder.cpp
tests/include/: sc_top.h  test_half_adder.h
uvm/: apb_agent.svh  apb_driver.svh  apb_env.svh  apb_if.svh  apb_monitor.svh  apb_scoreboard.svh  apb_seq_item.svh  apb_sequence.svh  apb_sequencer.svh  apb_test.svh  prj_pkg.svh  tb_top.sv
